--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
     
                 <section>
                     <div class="rightSection">
-                        <h1>Kelvin Kramer</h1>
-                        <h1>Designer & Developer</h1>
+                        <div class="Kelvin">
+                            <h1>Kelvin Kramer</h1>
+                            <h1 class="design_text">Designer & Developer</h1>
+                        </div>
         
                         <p>I’m a portrait, fashion and lifestyle photographer living In New York City. During my thirteen year tenure here.</p>
                     </div>
